2001-05-12  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_single_transform_list): Simplify
	computation of $object and $this_obj_ext.
	* tests/lex3.test: Merge into...
	* tests/lex.test: here.
	* tests/pr19.test: Improve and rename as...
	* tests/lex3.test: this.

2001-05-09  Tom Tromey  <tromey@redhat.com>

	* automake.in (read_am_file): Correctly compute $saw_bk.
	(scan_autoconf_files): Ensure configure_dist_common is always
	set.
	* tests/defs (AUTOMAKE): Added --Werror.

2001-05-09  Pavel Roskin  <proski@gnu.org>

	* automake.in (define_compiler_variable): Escape $(LIBTOOL) in
	double quotes.

2001-05-09  Tom Tromey  <tromey@redhat.com>

	* tests/werror.test: Use `rm -f'.

2001-05-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_line_warning): Invoke `am_line_error', not itself.

2001-05-09  Akim Demaille  <akim@epita.fr>

	* automake.in: Remove some code left from bad patches.
	(&handle_dependency): Remove, for the same reason.

2001-05-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&make_paragraphs): Transform BUILD, HOST and TARGET.
	(&handle_tests_dejagnu, &define_standard_variables): Don't.
	(&define_standard_variables): Don't transform %top_builddir% since...
	* header-vars.am: Use %TOPDIR% instead.

2001-05-09  Akim Demaille  <akim@epita.fr>

	* automake.in (@objects): Remove, unused.
	Remove all the code related to it, and to former `$(OBJECTS)'.

2001-05-08  Tom Tromey  <tromey@redhat.com>

	For PR automake/29:
	* ylwrap: Handle arguments to program.  Remove old code that tried
	to avoid absolute paths and add new code to do it in all cases.
	Removed ancient logic that tried to deal with relative path.
	* tests/Makefile.am (TESTS): Added yacc4.test.
	* tests/yacc4.test: New file.

	Fix for PR automake/149 and werror.test:
	* automake.in (require_file_internal): Use am_line_warning or
	am_conf_line_warning when suppressing error.
	(am_line_warning): New sub.
	(am_conf_line_warning): Save and restore warning signal.