@@ -1,3 +1,10 @@
+2001-05-12  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* automake.in (ASSIGNMENT_PATTERN): Make variable-name pattern 
+	stop at the first '='.
+	* tests/Makefile.am (TESTS): Added vars.test.
+	* tests/vars.test: New file.
+
 2001-05-12  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (&handle_single_transform_list): Simplify
